added some todo items

--- a/TODO
+++ b/TODO
@@ -13,3 +13,8 @@ Todo
 - add a footer (or at least some extra space on the bottom)
 - minify js/css
 - add a "CV" page with more detail on past experience
+- convert to typescript:
+    - Curtain
+    - Balls
+    - Dough
+    - Ragdoll Aquarium
