--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ Todo
 - add a footer (or at least some extra space on the bottom)
 - minify js/css
 - add a "CV" page with more detail on past experience
-- convert to typescript:
+- convert to javascript:
     - Curtain
     - Balls
     - Dough
